--- a/projects.html
+++ b/projects.html
@@ -206,17 +206,12 @@
         <div id="Projects">
             <h1 class="project_sub">Projects</h1>
             <p>
-                My time at Eastern University has truly been a transformative journey, inspiring me to embark on projects that I once thought were beyond my capabilities.<br>
-                Each day has brought new challenges and opportunities, allowing me to explore the fascinating world of coding in ways I never imagined possible.
+                My time at Eastern University has truly been a transformative journey,
+                Each day has brought new challenges and opportunities, allowing me to explore the world of coding in ways I never imagined.
             </p>
             <p>
-                As I dive deeper into various programming languages and concepts, I’ve discovered innovative techniques to make coding not just educational but also enjoyable.<br>
-                The process of problem-solving has become an exciting puzzle, and each completed project feels like a significant achievement.
-            </p>
-            <p>
-                On this page, I’m thrilled to showcase some of the projects I’ve developed during my studies.<br>
-                Each project represents not only the skills I’ve acquired but also my passion for technology and creativity.<br>
-                I hope these endeavors will inspire others as much as they have inspired me.<br>
+                As I dive deeper into various programming languages and concepts, I’ve discovered innovative techniques to make coding not just educational but also enjoyable.
+                The process of problem-solving has become an exciting puzzle, On this page, I’m thrilled to showcase some of the projects I’ve developed during my studies.
                 I look forward to sharing my experiences and insights as I continue to learn and grow in this ever-evolving field.
             </p>
             
